Fix for WK-57: Prevent scrollbars from appearing in nested tables
Have scroll on the table, just not on nested tables

--- a/src/main/webapp/css/styles-03d-fixed-pixel.less
+++ b/src/main/webapp/css/styles-03d-fixed-pixel.less
@@ -197,6 +197,11 @@ body
     background-color: @table-background-color;
 }
 
+.table-data-container-outermost {
+   max-height: @max-top-table-height;
+   overflow-y: scroll;
+}
+   
 // The data part of a table is contained in a table-data-container that will
 // scroll separately from the headings.
 //
